Fix issue #15 (bug). overflow not hidden when the sidebar is swiped

--- a/source/_css/base/_base.scss
+++ b/source/_css/base/_base.scss
@@ -21,6 +21,11 @@ body {
     letter-spacing: $letter-spacing-base;
     // Improve smoothing of the font by adding subpixel in Safari
     @include prefix(font-smoothing, subpixel-antialiased, 'webkit');
+
+    // Hide overflow-x when the sidebar is swiped
+    &.pushed {
+        overflow-x: hidden;
+    }
 }
 
 h1,
